Add Unix domain socket support for Consul agent connections (#308)
Add unixDomainSocketPath to ConsulFactory and
getConsulAgentUnixDomainSocketPath() to ConsulBundle, allowing a
Dropwizard service to connect to a local Consul agent via a Unix
domain socket instead of TCP.

ConsulFactory gains a nullable unixDomainSocketPath field (YAML:
consul.unixDomainSocketPath). When set, build() calls
withUnixDomainSocket(unixDomainSocketPath) instead of
withHostAndPort(endpoint). Configuring both unixDomainSocketPath
and a non-default endpoint is rejected by an @AssertTrue constraint
during Dropwizard configuration parsing. unixDomainSocketPath is
included in hashCode and equals.

ConsulBundle gains getConsulAgentUnixDomainSocketPath() returning
Optional<String>, defaulting to empty. initialize() uses the socket
path when present, otherwise falls through to the existing host/port
path. The @VisibleForTesting annotation is removed from
getConsulAgentHost(), getConsulAgentPort(), and getConsulAclToken()
since these are intentional extension points, not test seams.

junixsocket-core is declared as an optional dependency (version
managed by kiwi-bom 3.1.0+) and must be added explicitly by users
who configure unixDomainSocketPath.

Depends on consul-client 1.12.0, which adds
Consul.Builder.withUnixDomainSocket() and the UnixDomainSocketFactory
that routes OkHttp connections through the socket.

Closes #306

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>